apps/qbittorrent/deployment-qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 79.170.51.61
          - 8.8.8.8
      containers:
        - image: linuxserver/qbittorrent:5.2.4
          name: qbittorrent
          resources:
            requests:
              cpu: 100m
              memory: 6Gi
            limits:
              cpu: 400m
              memory: 6Gi
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: qbittorrent
            - mountPath: /data/downloads
              name: library
              subPath: "downloads"
      hostname: qbittorrent
      restartPolicy: Always
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
        - name: qbittorrent
          persistentVolumeClaim:
            claimName: qbittorrent
