apps/qbittorrent/service-qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
spec:
  ports:
    - name: "web-ui"
      port: 8080
      targetPort: 8080
    - name: "torrent"
      port: 6881
      targetPort: 6881
    - name: "torrent-udp"
      port: 6881
      protocol: UDP
      targetPort: 6881
  selector:
    app: qbittorrent
