apps/qbittorrent/ingress-qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: plex
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
